# instrumentedVerilator

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.verilator  Dockerfile.yosys  Makefile  README.md  course_of_action.excalidraw  gen_seed.py  make.dmp  pyproject.toml  randomize-2.sv  tf-coverage.json  vs-coverage.json
.github/workflows/: docker-publish.yml
coverage_reports.bak/comparison/personnal_test_files/: coverage_report.V3ActiveTop.cpp.2e7d4a84dff3650ffd3b51037f09af94.html  coverage_report.V3AssertPre.cpp.4aa452094b47aeca94becc7e3e348ec8.html  coverage_report.V3Begin.cpp.c4ef954deefb2d1705432455d633afa6.html  coverage_report.V3CCtors.cpp.843717217fd7957ae51ba5b6b07d8762.html  coverage_report.V3Case.cpp.c8f0c62e7ecf1a03a0af1ad687e64326.html  coverage_report.V3Cast.cpp.40f72d24bb814c1532232731cb88eede.html  coverage_report.V3Class.cpp.1633f4d3b3c48865010a7d8c5ba5cc1b.html  coverage_report.V3Clean.cpp.dcf33225ddf993afa23ea2e41d9b3b2a.html  coverage_report.V3Clock.cpp.7e069278f56e962d69bbd4b7590e93ca.html  coverage_report.V3Combine.cpp.0bd6906120004c55d7109fe8aa515a50.html  coverage_report.V3Const.cpp.a2b89afa2d5d2faf3b897b7c887b960a.html  coverage_report.V3Dead.cpp.3a1c5b8126e5468d6ab1e02c7948ce47.html  coverage_report.V3Delayed.cpp.8064308eb6f0320656a74ba09e9ea3ca.html  coverage_report.V3Depth.cpp.f860c211db4e09e4e3046438bc99d8f6.html  coverage_report.V3DepthBlock.cpp.4f35a554f16f867eb1a8030b603e8b69.html  coverage_report.V3DfgAstToDfg.cpp.6c72802e6d9a34340d75e79ad2d76dc7.html  coverage_report.V3DfgCache.cpp.3e7111e23470c9c5064adba96bf132a9.html  coverage_report.V3DfgPasses.cpp.a1f6f6b0a3a974525d97a8276778aee5.html  coverage_report.V3DfgRegularize.cpp.da9d04e7bd3113d24abc35dc710a9da9.html  coverage_report.V3EmitCFunc.cpp.ce76a4841d7e37c4e10a291a53de0129.html  coverage_report.V3EmitCInlines.cpp.7438d97a534dbf1e0f6a617891d63685.html  coverage_report.V3EmitCMain.cpp.ea27216bf45c06038afb2c67c6972dc8.html  coverage_report.V3EmitCModel.cpp.e386e9cff81cefed9a32729e9e33fe28.html  coverage_report.V3EmitCPch.cpp.902b74956ea66967f2f25aa2a96e9850.html  coverage_report.V3EmitCSyms.cpp.ff05dc4bb5f5ac218d451e654238e3eb.html  coverage_report.V3Error.cpp.b470a97b04ee62e6412346f4ac8ad99e.html  coverage_report.V3Expand.cpp.367e75cf738dc37aaa48d5b6f6efe074.html  coverage_report.V3FileLine.cpp.ed205252ddf8c6e09dd86ae25498c28e.html  coverage_report.V3Gate.cpp.c433fa71c5b5f8a2186a3ec0cdca0a45.html  coverage_report.V3Global.cpp.ed28474145f87a3e4baddd802f4d27d3.html  coverage_report.V3GraphAlg.cpp.f2ad075f4819741d5040708f7958b518.html  coverage_report.V3GraphPathChecker.cpp.b4cf4df6da47949719df5593191b8765.html  coverage_report.V3Inst.cpp.54471b8b55e77a41109a8eba13a37a73.html  coverage_report.V3InstrCount.cpp.77649a1428ef0c6d546503f110f11304.html  coverage_report.V3Interface.cpp.2c7ad2d41272b7e574f9689b387e977d.html  coverage_report.V3Life.cpp.9ce5d729cc0d2fd50e7fbb2e2b05402a.html  coverage_report.V3LifePost.cpp.b05da15740192371bb63ab14ea8b3eb9.html  coverage_report.V3LinkInc.cpp.63ba0b5d7c60c88567831abb656f362e.html  coverage_report.V3LinkParse.cpp.69b0fb7ddf4c78368270dee613f1b411.html  coverage_report.V3LinkResolve.cpp.73d736418b4115db68b3e3249ae2bd94.html  (+32 more)
coverage_reports.bak/comparison/transfuzzTestFiles/: coverage_report.V3Assert.cpp.93b48fbc4d5bd2d86afce1823a40fc7c.html  coverage_report.V3Ast.cpp.471bea9b5d5134658207909851af5671.html  coverage_report.V3AstNodes.cpp.3c8bc47daab8a98a82a4eb583d40f4a9.html  coverage_report.V3Begin.cpp.c4ef954deefb2d1705432455d633afa6.html  coverage_report.V3Branch.cpp.683b3551319634a14cf9835d7e8af22d.html  coverage_report.V3Broken.cpp.51b1c424ae5387cc9f30a8aa97d3ea64.html  coverage_report.V3Class.cpp.1633f4d3b3c48865010a7d8c5ba5cc1b.html  coverage_report.V3Clean.cpp.dcf33225ddf993afa23ea2e41d9b3b2a.html  coverage_report.V3Combine.cpp.0bd6906120004c55d7109fe8aa515a50.html  coverage_report.V3Config.cpp.ec66e0a615b5b4070d48ddcedea85ea1.html  coverage_report.V3Const.cpp.a2b89afa2d5d2faf3b897b7c887b960a.html  coverage_report.V3Dead.cpp.3a1c5b8126e5468d6ab1e02c7948ce47.html  coverage_report.V3Delayed.cpp.8064308eb6f0320656a74ba09e9ea3ca.html  coverage_report.V3Descope.cpp.4411437b677e323359fcff404d5b2ba8.html  coverage_report.V3Dfg.cpp.9eac1b751f2e766b28202ac067af9e57.html  coverage_report.V3DfgCache.cpp.3e7111e23470c9c5064adba96bf132a9.html  coverage_report.V3DfgDecomposition.cpp.a9fab9e617783ac36224d84a32f724aa.html  coverage_report.V3DfgPasses.cpp.a1f6f6b0a3a974525d97a8276778aee5.html  coverage_report.V3DfgRegularize.cpp.da9d04e7bd3113d24abc35dc710a9da9.html  coverage_report.V3DupFinder.cpp.f8b2fa55158b050fe2788126dc65c36d.html  coverage_report.V3EmitCBase.cpp.80f969973952f59e42f0e629fa86d349.html  coverage_report.V3EmitCFunc.cpp.ce76a4841d7e37c4e10a291a53de0129.html  coverage_report.V3EmitCHeaders.cpp.2b1172469a122785205525501207f44a.html  coverage_report.V3Error.cpp.b470a97b04ee62e6412346f4ac8ad99e.html  coverage_report.V3Expand.cpp.367e75cf738dc37aaa48d5b6f6efe074.html  coverage_report.V3File.cpp.22cceaec3d78eeb32df3879da3650695.html  coverage_report.V3Force.cpp.76a76fd659e8e376cf39c1497463bc29.html  coverage_report.V3Fork.cpp.fa7f5b75e902fa3808b6206e36ba31b5.html  coverage_report.V3Gate.cpp.c433fa71c5b5f8a2186a3ec0cdca0a45.html  coverage_report.V3GraphAlg.cpp.f2ad075f4819741d5040708f7958b518.html  (+37 more)
snippetGen/: pyproject.toml
snippetGen/snippets/: active.sv  assert.sv  number-0.sv  number.sv  randomize-1.sv  randomize-3.sv  randomize.sv  schedVirtIface.sv  task.sv  timing.sv  top.sv
snippets/: V3DepthBlock.sv  V3Force.sv  V3Sampled.sv  V3SchedVirtIface.sv
testFiles/: coverageScript.py  inverter.sv  plotCoverage.py  tb_base.cc  tristate_buffer.sv
testFiles/include/: ticks.h
testFiles/personal_test_files/: active.sv  assert.sv  assertPre.sv  ast.sv  astNodes.sv-  config-.sv  const-.sv  empty.sv  force.sv  number.sv  randomize.sv  reloop.sv  schedAcyclic.sv--  schedVirtIface.sv  slice.sv  splitVar?.sv  subst-.sv  table.sv  task.sv  threadpool.sv-  timing.sv  tristate.sv  undriven.sv-  unknown.sv  variableOrder.sv-  width.sv?
(+271 files in other folders)
